<resources>
    <string name="app_name">MyPlanning</string>
    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="password2_hint">Repeteix Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_login">Usuario</string>
    <string name="boton_login">Sign In</string>
    <string name="boton_offline">Offline</string>
    <string name="user_image_content">Imagen avatar usuario</string>
    <string name="channel_name">Notificacions</string>
    <string name="channel_description">Canal de Notificacions</string>
    <string name="mail_user_register">Correu Electrònic</string>
    <string name="user_register">Registrar-se</string>

    <string-array name="dias">
        <item>Seleccione</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="minutos">
        <item>Seleccione</item>
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="horas">
        <item>Seleccione</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="meses">
        <item>Seleccione</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="años">
        <item>Seleccione</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
    </string-array>

    <string-array name="actividades">
        <item>Seleccione</item>
        <item>Schedule</item>
        <item>To-Do</item>
        <item>Tasks</item>
    </string-array>

    <string name="text_weekly">Weekly Planner</string>

    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">LogIn Activity</string>
    <string name="registre_fragment_label">Registre Activity</string>
    <string name="diari_fragment_label">Diari Activity</string>
    <string name="seleccio_fragment_label">Seleccio Activity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="config_layout_Spinner_priv"></string-array>
    <string-array name="config_layout_Spinner_comp"></string-array>
    <string name="dia">1</string>
    <string name="mensual_Layout_text">Mensual Planner</string>
    <string name="mensual_layout_calendar">TODO</string>
    <string name="config_layout_TextView_config">Configuració</string>
    <string name="config_layout_Spinner_priv_text">Privacitat</string>
    <string name="config_layout_Spinner_comp_text">Compartir</string>
    <string name="config_layout_Spinner_notif_text">Notificacions</string>
    <string name="config_layout_spinner_perfil_text">Perfil</string>
    <string name="FlechaAnterior"><![CDATA[<-]]></string>
    <string name="FlechaSig"><![CDATA[->]]></string>
    <string name="febrer">Febrer</string>
    <string name="mar">Març</string>
    <string name="abril">Abril</string>
    <string name="maig">Maig</string>
    <string name="Març">Març</string>
    <string name="gener">TODO</string>
    <string name="textGener">Gener</string>
    <string name="textJuny">Juny</string>
    <string name="textJuliol">Juliol</string>
    <string name="textAgost">Agost</string>
    <string name="textSetembre">Setembre</string>
    <string name="textOctubre">Octubre</string>
    <string name="textNovembre">Novembre</string>
    <string name="textDecembre">Decembre</string>
    <string name="text2022">2022</string>
    <string name="btngener">btnGener</string>
    <string name="btnfebrer">btnFebrer</string>
    <string name="btnMarç">btnMarç</string>
    <string name="btnAbril">btnAbril</string>
    <string name="btnMaig">btnMaig</string>
    <string name="btnJuny">btnJuny</string>
    <string name="btnJuliol">btnJuliol</string>
    <string name="btnAgost">btnAgost</string>
    <string name="btnSetembre">btnSetembre</string>
    <string name="btnOctubre">btnOctubre</string>
    <string name="btnNovembre">btnNovembreN</string>
    <string name="btnDecembre">btnDecembre</string>
    <string name="btnFlechaAnterior"><![CDATA[<-]]></string>
    <string name="textDia">Dissabte 10 d\'Abril</string>
    <string name="btnFlechaSig"><![CDATA[->]]></string>
    <string name="txtSchedule">Schedule</string>
    <string name="btnNouEvent">Nou Event</string>
    <string name="txtToDo">To-Do</string>
    <string name="txtTask">Tasks</string>
    <string name="txtDay">Day Happiness</string>
    <string name="txtNotes">Nota</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="btnDiari">Diari</string>
    <string name="btnSemanal">Semanal</string>
    <string name="btnMensual">Mensual</string>
    <string name="btnAnual">Anual</string>
    <string name="btnConfiguració">Configuració</string>
    <string name="btn_weekly_planner">Weekly Planner</string>
    <string name="swtch_NightMode">NightMode</string>
    <string name="txtTarea">Tarea</string>
    <string name="txtNomTarea">Nom de la Tarea</string>
    <string name="spinnerDay">Day</string>
    <string name="spinnerMinutes">Minutes</string>
    <string name="spinnerHour">Hour</string>
    <string name="spinnerTarea">Tarea</string>

    <string name="txtmes">txtMes</string>
    <string name="txtany">txtAny</string>
    <string name="txtAlarma">Alarma</string>
    <string name="selecciocolor">seleccioColor</string>
    <string name="pujar_tasca">Pujar Tasca</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="nom_de_la_tarea">Nom de la Tarea</string>
    <string name="textdia">textDia</string>
    <string name="txtHapiness">Hapiness</string>
    <string name="txtMensual">Abril 2022</string>
    <string name="txtDimarts">Dm</string>
    <string name="txtDimecres">Dx</string>
    <string name="txtDijous">Dj</string>
    <string name="txtDivendres">Dv</string>
    <string name="txtDissabte">Ds</string>
    <string name="txtDiumenge">Dm</string>
    <string name="txtDilluns">Di</string>
    <string name="textSeguent"><![CDATA[->]]></string>
    <string name="txtdia">txtDia</string>
    <string name="txtAnterior"><![CDATA[<-]]></string>
    <string name="txtSeguentAnual"><![CDATA[->]]></string>
    <string name="txtSeleccio">Seleccio</string>
    <string name="valoracio_del">"Valoracio del "</string>
    <string name="txtdiaValoracio">txtDia</string>
    <string name="pujar_valoraci">Pujar Valoració</string>
    <string name="cancelar">Cancelar</string>
    <string name="valoraci_del">Valoració del dia:</string>
    <string name="valorardia">valorarDia</string>
    <string name="selecciona_color">Selecciona color:</string>
    <string name="afegir_event">Afegir Event</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="actualitzar_tasca">Actualitzar tarea</string>
    <string name="actualitzar">Actualitzar</string>
    <string name="eliminarTarea">Eliminar</string>
    <string name="nota">Nota</string>
    <string name="valoracioDia">valoracio dia</string>
    <string name="nou_login">Nou login</string>
    <string name="myplanning">MyPlanning</string>
    <string name="correu_electronic">Correu Electronic</string>
    <string name="proveidor">Proveidor</string>
    <string name="usuari">Usuari</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="loguear_se">Loguear-se</string>
    <string name="tancar_sessi">Tancar Sessió</string>
    <string name="google">Google</string>
    <string name="prefs_file">com.example.myplanning.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id_string">67649195632-bmmapi528qfl9rpg2f3fnhgua5er1lj6.apps.googleusercontent.com</string>
    <string name="usuarii">Usuari</string>
    <string name="upload_image">Upload Image:</string>
    <string name="todoo">TODO</string>

</resources>
