<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.myplanning.activitats.Mensual.CalendariMensual">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAnterior"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/background"
            android:onClick="prevMesAction"
            android:text="@string/btnFlechaAnterior"
            android:textColor="@color/color_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="seleccioAction"
            android:text="@string/txtmes"
            android:textColor="@color/color_text"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnSeguent"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="nextMesAction"
            android:text="@string/textSeguent"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondo_para_text"
            android:text="@string/txtDilluns"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondo_para_text"
            android:text="@string/txtDimarts"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondo_para_text"
            android:text="@string/txtDimecres"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondo_para_text"
            android:text="@string/txtDijous"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondo_para_text"
            android:text="@string/txtDivendres"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondo_para_text"
            android:text="@string/txtDissabte"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondo_para_text"
            android:text="@string/txtDiumenge"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            android:textSize="16sp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendariRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>