<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/txtViewAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/myplanning"
            android:textColor="@color/color_text"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/upload_image"
            android:textColor="@color/color_text" />

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@color/white"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/todoo" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/txtCorreuAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/correu_electronic"
            android:textColor="@color/color_text"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/txtUsuariAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/usuarii"
            android:textColor="@color/color_text"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/txtProveidorAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/proveidor"
            android:textColor="@color/color_text"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTancarSessio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/background_boton"
                android:fontFamily="@font/kaushan_script"
                android:onClick="tancarSessioAccio"
                android:text="@string/tancar_sessi"
                android:textColor="@color/color_text" />

        </LinearLayout>

        <Button
            android:id="@+id/btnConfiguracio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_boton"
            android:fontFamily="@font/kaushan_script"
            android:onClick="configuracioAccio"
            android:text="@string/btnConfiguració"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNightMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="162dp"
        android:minHeight="48dp"
        android:onClick="nightModeAccio"
        android:text="@string/swtch_NightMode"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>