<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/txtViewAuth"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/myplanning"
            android:textColor="@color/color_text"
            android:textSize="34sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/emailAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/kaushan_script"
            android:hint="@string/correu_electronic"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/color_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/userAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/kaushan_script"
            android:hint="@string/usuari"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/color_text"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/passAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/kaushan_script"
            android:hint="@string/contrasenya"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/color_text" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRegistreAuth"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/background_boton"
                android:onClick="registrarseAccio"
                android:text="@string/registrar_se" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnLoginAuth"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/background_boton"
                android:onClick="loguearseAccio"
                android:text="@string/loguear_se" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btnGoogle"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_google"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:onClick="loginGoogle"
            android:paddingStart="150dp"
            android:text="@string/google"
            android:textAlignment="textStart"
            android:textColor="@color/color_text"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/offlineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_offline"
            android:onClick="loginOffline"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>