<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/txtTarea"
        android:layout_width="36dp"
        android:layout_height="27dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="648dp"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/txtTarea"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTareaName"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="574dp"
        android:autofillHints=""
        android:backgroundTint="@color/background_boton"
        android:ems="10"
        android:fontFamily="@font/kaushan_script"
        android:hint="@string/nom_de_la_tarea"
        android:inputType="textPersonName"
        android:labelFor="@id/txtTarea"
        android:minHeight="48dp"
        android:text="@string/txtNomTarea"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTarea"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/spinnerDay"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="508dp"
        android:backgroundTint="@color/background_boton"
        android:contentDescription="@string/spinnerDay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTareaName" />

    <Spinner
        android:id="@+id/spinnerMes"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="504dp"
        android:backgroundTint="@color/background_boton"
        android:contentDescription="@string/txtmes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/spinnerDay"
        app:layout_constraintTop_toBottomOf="@+id/txtTareaName"
        app:layout_constraintVertical_bias="0.333" />

    <Spinner
        android:id="@+id/spinnerAny"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="504dp"
        android:backgroundTint="@color/background_boton"
        android:contentDescription="@string/txtany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/spinnerMes"
        app:layout_constraintTop_toBottomOf="@+id/txtTareaName"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAlarma"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="443dp"
        android:backgroundTint="@color/background_boton"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/txtAlarma"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMes"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/spinnerSeleccioColor"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="377dp"
        android:backgroundTint="@color/background_boton"
        android:contentDescription="@string/selecciocolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchAlarma"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnPujarTasca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="199dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="123dp"
        android:backgroundTint="@color/background_boton"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/pujar_tasca"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSeleccioColor" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="199dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="123dp"
        android:backgroundTint="@color/background_boton"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/txtCancelar"
        android:textColor="@color/color_text"
        android:textColorHint="@color/color_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPujarTasca"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSeleccioColor" />

</androidx.constraintlayout.widget.ConstraintLayout>